--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.5.11",
+    "mongoose-auto-increment": "^5.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
